--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-body, html{
+/*body, html{
   height: 100%;
   background: #222222;
   font-family: 'Lato', sans-serif;
@@ -98,7 +98,7 @@ form.login input[type="submit"]:hover
     background-color: #75ba48;
     border-color: #75ba48;
     width: 100%;
-    /* font-weight: 600 !important; */
+     font-weight: 600 !important; 
     padding: 7px 10px;
     font-size: 15px !important;
     border-radius: 0px;
@@ -194,7 +194,7 @@ form.login a:hover
     letter-spacing: 1px;
 }
 
-/*----------quiz.css---------------*/
+----------quiz.css---------------
 
 
 .loanParamsLoader {
@@ -293,7 +293,7 @@ input[type=radio]:checked ~ .check {
 }
 
 input[type=radio]:checked ~ .check::before{
-  background: #00FF00;/*attr('data-background');*/
+  background: #00FF00;attr('data-background');
 }
 
 input[type=radio]:checked ~ label{
@@ -330,19 +330,19 @@ input[type=radio]:checked ~ label{
     border-top-left-radius: 25px;  
 }
 #alert{
-    /* Position fixed */
+     Position fixed 
     position:fixed;
-    /* Center it! */
+     Center it! 
     top: 50%;
     left: 50%;
     margin-top: -50px;
     margin-left: -100px;
 }
-/*----------riple bubble-----------------*/
+----------riple bubble-----------------
 ul {
     margin: 0 auto;
 }
-/*.ink styles - the elements which will create the ripple effect. The size and position of these elements will be set by the JS code. Initially these elements will be scaled down to 0% and later animated to large fading circles on user click.*/
+.ink styles - the elements which will create the ripple effect. The size and position of these elements will be set by the JS code. Initially these elements will be scaled down to 0% and later animated to large fading circles on user click.
 .ink {
     display: inline; 
     position: absolute;
@@ -350,10 +350,10 @@ ul {
     border-radius: 100%;
     transform: scale(0);
 }
-/*animation effect*/
+animation effect
 .ink.animate {animation: ripple 0.65s linear;}
 @keyframes ripple {
-    /*scale the element to 250% to safely cover the entire link and fade it out*/
+    scale the element to 250% to safely cover the entire link and fade it out
     100% {opacity: 0; transform: scale(2.5);}
 }
-
+*/
